# new-project-template

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.py  conanfile.py
.travis/: install.sh
doc/: INSTALL.md
example/: CMakeLists.txt  example.cpp
src/: CMakeLists.txt  private.cpp  private.h  public.cpp
src/include/mp/: public.h
test/: CMakeLists.txt  unit_tests.cpp
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
